# Lang_graph-Study

./: .env  .gitignore  main.py  pyproject.toml
src/: Aula_3.py  Aula_4.py  Inicio_langgraph.py
src/ex006/: graph.py  langgraph.json  main.py  utils.py
